simplify fReadOutput plus boolean patch from Rhein

--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -44,7 +44,7 @@ Every element card has the following format:
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{card} ::= \bnt{elem_type} :
         \bnt{arglist}
-        [ , \kw{output} , \{ \kw{yes} | \kw{no} \} ] 
+        [ , \kw{output} , \{ \kw{yes} | \kw{no} | (\ty{bool})\bnt{output_flag} \} ]
         [ , \bnt{extra_arglist} ] ;
 \end{Verbatim}
 %\end{verbatim}
