--- a/mbdyn/manual/tecman/tecman.tex
+++ b/mbdyn/manual/tecman/tecman.tex
@@ -807,231 +807,9 @@ TODO
 TODO
 
 
-\section{Inverse Dynamics Problem}
-\subsection{Inverse Kinematics Subproblem}
 
-\subsubsection{Fully Actuated Problem}
-Constraint equation:
-\begin{align}
-	\T{\psi}\plbr{\T{x}}
-	&=
-	\T{\alpha}(t)
-	\label{eq:ikp:fap:psi}
-\end{align}
-with $\T{\psi}_{/\T{x}}$ square, full rank.
-This nonlinear problem is solved for $\T{x}$ to convergence.
-Without excessive loss in generality,
-the dependence of Eq.~(\ref{eq:ikp:fap:psi}) on $\T{x}$ and $t$
-is assumed to be separable.
-
-Constraint derivatives:
-\begin{subequations}
-\begin{align}
-	\T{\psi}_{/\T{x}} \dot{\T{x}}
-	&=
-	\dot{\T{\alpha}}
-	\label{eq:id:iks:fa:dpsi}
-	\\
-	\T{\psi}_{/\T{x}} \ddot{\T{x}}
-	&=
-	\ddot{\T{\alpha}}
-	-
-	\plbr{\T{\psi}_{/\T{x}} \dot{\T{x}}}_{/\T{x}} \dot{\T{x}}
-	\label{eq:id:iks:fa:ddpsi}
-\end{align}
-\end{subequations}
-the two problems are linear respectively in $\dot{\T{x}}$ and $\ddot{\T{x}}$;
-they can be solved sequentially.
-Moreover, they require the same matrix $\T{\psi}_{/\T{x}}$
-which was already factorized to solve the problem
-of Eq.~(\ref{eq:ikp:fap:psi}) using a Newton-Raphson iteration.
-
-
-
-\subsubsection{Overactuated Problem}
-Constraint equation:
-\begin{align}
-	\T{\psi}\plbr{\T{x}}
-	&=
-	\T{\alpha}(t)
-	\label{eq:ikp:op:psi}
-\end{align}
-with $\T{\psi}_{/\T{x}}$ rectangular, full row rank.
-The problem is underdetermined;
-as a consequence, some criteria are needed to find an optimal solution.
-
-The problem can be augmented by
-\begin{align}
-	\TT{K} \plbr{\T{x} - \T{x}_0}
-	+
-	\T{\psi}_{/\T{x}}^T \T{\lambda}
-	&=
-	\T{0}
-\end{align}
-This nonlinear problem is solved for $\T{x}$ and $\T{\lambda}$
-to convergence ($\TT{K}$ and $\T{\psi}_{/\T{x}}$ may further depend
-on $\T{x}$).
-It corresponds to a least-squares solution for $\T{x} - \T{x}_0$,
-where the functional
-\begin{align}
-	J_{\T{x}}
-	&=
-	\frac{1}{2} \plbr{\T{x} - \T{x}_0}^T \TT{K} \plbr{\T{x} - \T{x}_0}
-\end{align}
-is minimized subjected to $\T{\psi} = \T{\alpha}$
-and weighted by matrix $\T{K}$;
-$\T{x}_0$ is a reference solution.
-Matrix $\TT{K}$ can further depend on $\T{x}$.
-
-The reference solution $\T{x}_0$ can be used to further control
-the quality of the solution.
-For example, it may represent a prescribed tentative,
-although possibly incompatible, trajectory.
-Another option consists in augmenting $J_{\T{x}}$
-with another quadratic form
-\begin{align}
-	J_{\T{x}}
-	&=
-	\frac{1}{2} \plbr{\T{x} - \T{x}_0}^T \TT{K} \plbr{\T{x} - \T{x}_0}
-	+
-	\frac{1}{2} \plbr{\T{x} - \T{x}_\text{prev}}^T \TT{M} \plbr{\T{x} - \T{x}_\text{prev}}
-\end{align}
-where $\T{x}_\text{prev}$ is the value of $\T{x}$ at the previous time step.
-This modified functional weights the rate of change of $\T{x}$ within
-two consecutive steps.
-As a consequence, minimal position changes (i.e.\ velocities),
-weighted by the mass of the system, are sought.
-
-Constraint first derivative:
-\begin{subequations}
-\begin{align}
-	\TT{R} \plbr{\dot{\T{x}} - \dot{\T{x}}_0}
-	+
-	\T{\psi}_{/\T{x}}^T \T{\lambda}
-	&=
-	\T{0}
-	\\
-	\T{\psi}_{/\T{x}} \dot{\T{x}}
-	&=
-	\dot{\T{\alpha}}
-	.
-\end{align}
-\end{subequations}
-The second derivative of the constraint cannot be resolved
-as in the fully actuated case, otherwise it could yield accelerations
-that cannot be imposed by the constraints.
-On the contrary, the inverse dynamics problem is solved
-without explicitly computing the accelerations,
-as shown in Section~\ref{sec:id:ids}.
-\begin{comment}
-\begin{subequations}
-\begin{align}
-	\TT{M} \plbr{\ddot{\T{x}} - \ddot{\T{x}}_0}
-	+
-	\T{\psi}_{/\T{x}}^T \T{\lambda}
-	&=
-	\T{0}
-	\\
-	\T{\psi}_{/\T{x}} \ddot{\T{x}}
-	&=
-	\ddot{\T{\alpha}}
-	-
-	\plbr{\T{\psi}_{/\T{x}} \dot{\T{x}}}_{/\T{x}} \dot{\T{x}}
-	.
-\end{align}
-\end{subequations}
-The two problems are linear respectively in $\dot{\T{x}}$ and $\ddot{\T{x}}$;
-the same symbol $\T{\lambda}$ is used for the multiplier since it is ineffective
-(its value is never used).
-The problems can be solved sequentially.
-Only in case $\TT{K}$, $\TT{R}$ and $\TT{M}$ are identical
-all problems use the same matrix and thus the same factorization
-can be reused.
-\end{comment}
-The constraint derivative problem is linear in $\dot{\T{x}}$;
-the same symbol $\T{\lambda}$ is used for the multiplier since it is ineffective
-(its value is never used).
-The problems can be solved sequentially.
-Only in case $\TT{K}$ and $\TT{R}$ are identical
-both problems use the same matrix and thus the same factorization
-can be reused.
-
-
-\subsection{Inverse Dynamics Subproblem}
-\label{sec:id:ids}
-
-\subsubsection{Fully Actuated Problem}
-The equation
-\begin{align}
-	\TT{M} \ddot{\T{x}}
-	+
-	\T{\psi}_{/\T{x}}^T \T{\lambda}
-	&=
-	\T{f}\plbr{\T{x}, \dot{\T{x}}, t}
-	\label{eq:id:ids:fa:equil}
-\end{align}
-yields
-\begin{align}
-	\T{\lambda}
-	&=
-	\T{\psi}_{/\T{x}}^{-T} \plbr{
-		\T{f}
-		-
-		\TT{M} \ddot{\T{x}}
-	}
-	\label{eq:id:ids:fa:lambda}
-	.
-\end{align}
-
-\subsubsection{Overactuated Problem}
-The overactuated problem cannot be resolved in this manner;
-on the contrary, Eq.~(\ref{eq:id:ids:fa:equil}), when $\T{\psi}_{/\T{x}}$
-is rectangular full row rank, must be used to determine the accelerations
-of the inverse kinematics problem simultaneously with the multipliers
-that solve the inverse dynamics problem.
-Otherwise, an arbitrary solution of the inverse kinematics problem
-at the acceleration level could yield an acceleration
-that cannot be imposed by the constraints.
-Eq.~(\ref{eq:id:ids:fa:equil}) yields
-\begin{align}
-	\ddot{\T{x}}
-	&=
-	\TT{M}^{-1} \plbr{
-		\T{f}
-		-
-		\T{\psi}_{/\T{x}}^T \T{\lambda}
-	}
-	\label{eq:id:ids:oa:ddot_x}
-	.
-\end{align}
-The constraint equation, at the acceleration level, yields
-\begin{align}
-	\T{\lambda}
-	&=
-	\plbr{
-		\T{\psi}_{/\T{x}} \TT{M}^{-1} \T{\psi}_{/\T{x}}^T
-	}^{-1} \plbr{
-		\T{\psi}_{/\T{x}} \TT{M}^{-1} \T{f}
-		-
-		\ddot{\T{\alpha}}
-		+
-		\plbr{\T{\psi}_{/\T{x}} \dot{\T{x}}}_{/\T{x}} \dot{\T{x}}
-	}
-	\label{eq:id:ids:oa:lambda}
-	.
-\end{align}
-The acceleration, although not strictly needed,
-is given by Eq.~(\ref{eq:id:ids:oa:ddot_x})
-considering the multipliers $\T{\lambda}$
-given by Eq.~(\ref{eq:id:ids:oa:lambda}).
-One can easily prove that in case of fully actuated problems
-Eq.~(\ref{eq:id:ids:oa:lambda}),
-considering Eq.~(\ref{eq:id:iks:fa:ddpsi}),
-is exactly Eq.~(\ref{eq:id:ids:fa:lambda}).
-
-
-
-
+% Inverse Dynamics Problem
+\input{invdyn}
 
 
 \chapter{Data Structure}
