only output counter if output is terminal (Reinhard Resch)

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -38,6 +38,7 @@ MBDyn 1.X-Devel
 		- fix crash in eigenvectors output (noted by Reinhard Resch)
 		- fix build with Intel's icpc
 		- fix parameter node use in elems (noted by Reinhard Resch)
+		- fix arpack counter for non terminal (Reinhard Resch)
 
 MBDyn 1.4.0
 	Enhancements:
