fixes (suggested by Gagnon)

--- a/mbdyn/manual/input/controldata.tex
+++ b/mbdyn/manual/input/controldata.tex
@@ -198,6 +198,8 @@ disables all.
 The default (no arguments) is to make the restart file only at the end of
 the simulation.
 
+\emph{Note: the \kw{make restart file} statement is experimental and essentially abandoned.}
+
 \subsection{Select Timeout}
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
