--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -391,14 +391,14 @@ at the previous, just completed time step.
 		\kw{xunitvec}	& Real	& Integer, Integer	& $X$ component of unit vector between structural nodes \\
 		\kw{yunitvec}	& Real	& Integer, Integer	& $Y$ component of unit vector between structural nodes \\
 		\kw{zunitvec}	& Real	& Integer, Integer	& $Z$ component of unit vector between structural nodes \\
-		\kw{angle}	& Real	& Integer,		& angle between structural nodes (norm of angular vector) \\
-		\kw{xangle}	& Real	& Integer,		& $X$ component of angular vector between structural nodes \\
-		\kw{yangle}	& Real	& Integer,		& $Y$ component of angular vector between structural nodes \\
-		\kw{zangle}	& Real	& Integer,		& $Z$ component of angular vector between structural nodes \\
-		\kw{anglerel}	& Real	& Integer, Integer	& angle between structural nodes (norm of angular vector) \\
-		\kw{xanglerel}	& Real	& Integer, Integer	& $X$ component of angular vector between structural nodes \\
-		\kw{yanglerel}	& Real	& Integer, Integer	& $Y$ component of angular vector between structural nodes \\
-		\kw{zanglerel}	& Real	& Integer, Integer	& $Z$ component of angular vector between structural nodes \\
+		\kw{angle}	& Real	& Integer		& norm of rotation vector of structural node \\
+		\kw{xangle}	& Real	& Integer		& $X$ component of structural node rotation vector \\
+		\kw{yangle}	& Real	& Integer		& $Y$ component of structural node rotation vector \\
+		\kw{zangle}	& Real	& Integer		& $Z$ component of structural node rotation vector \\
+		\kw{anglerel}	& Real	& Integer, Integer	& angle between structural nodes (norm of rotation vector) \\
+		\kw{xanglerel}	& Real	& Integer, Integer	& $X$ component of rotation vector between structural nodes \\
+		\kw{yanglerel}	& Real	& Integer, Integer	& $Y$ component of rotation vector between structural nodes \\
+		\kw{zanglerel}	& Real	& Integer, Integer	& $Z$ component of rotation vector between structural nodes \\
 		\kw{velocity}	& Real	& Integer		& norm of structural node velocity \\
 		\kw{velocity2}	& Real	& Integer		& square norm of structural node velocity \\
 		\kw{xvelocity}	& Real	& Integer		& $X$ component of structural node velocity \\
