--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -160,6 +160,8 @@ adaptive time step, it rather allows to prescribe a given
 variable time step pattern based on the rule defined
 by the \nt{time\_step\_pattern} \ty{DriveCaller}.
 \end{itemize}
+In any case, step change only occurs after the first step, which is performed
+using the \nt{time\_step} value provided with the \kw{time step} statement.
 
 
 \subsubsection{Min Time Step}
