basic support for underdetermined inverse dynamics

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -27,6 +27,7 @@ MBDyn 1.X-Devel
 		- allow boolean in node/element output flag (Reinhard Resch)
 		- added support for 'counter' output flag (Reinhard Resch)
 		- added generic rotor trim genel
+		- added basic support for underdetermined inverse dynamics
 	Backward compatibility issues:
 		- the (undocumented) output of the total (pin) joint changed
 		- the induced velocity element internal API changed
