(minimally) document model::current()

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -427,6 +427,8 @@ at the previous, just completed time step.
 				$Y$ component of rel.\ angular velocity between structural nodes \\
 		\kw{zangvrel}	& Real	& Integer, Integer	&
 				$Z$ component of rel.\ angular velocity between structural nodes \\
+		\kw{current}	& Real	& String		& allows to retrieve data specific to the current context
+				(essentially undocumented) \\
 \hline
 		\kw{drive}	& Real	& Integer, Real		&
 				evaluates the \htmlref{\kw{drive caller}}{sec:DRIVE-CALLER}
