fix gravity in inverse dynamics

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -52,6 +52,7 @@ MBDyn 1.X-Devel
 		- fix index in full submatrix add to full matrix (unused)
 		- fix rigid-body inertia of modal joint (record 12)
 		  when modal node is not in CM (noted by Paolo Zaltron)
+		- fix gravity in inverse dynamics (noted by Andrea Zanoni)
 
 MBDyn 1.4.0
 	Enhancements:
