add support for Mat3x3, Mat6x6 template drive callers; add support for variable data rigid body element

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -33,6 +33,8 @@ MBDyn 1.X-Devel
 		- added node/element private data funcs to model namespace
 		- added "current" func to model namespace
 		- added partial driven element support to inverse dynamics
+		- added support for Mat3x3 & Mat6x6 template drive callers
+		- added variable properties body
 	Backward compatibility issues:
 		- the (undocumented) output of the total (pin) joint changed
 		- the induced velocity element internal API changed
